[project]
name = "agencli"
version = "0.1.0"
description = "Creating an agentic cli"
authors = [
    {name = "AtulSehwag",email = "atul.sehwag@data-smith.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
